feat(dc-menu): add base to render cards for spaces

--- a/javascripts/discourse/templates/components/dc-menu.hbs
+++ b/javascripts/discourse/templates/components/dc-menu.hbs
@@ -16,4 +16,58 @@
       </div>
     </button>
   </header>
+  <div class="dc-container-fluid">
+    <div class="dc-row">
+      <div class="dc-col">
+        <div class="dc-menu-card dc-menu-card--membership">
+          <a
+            class="dc-text-monospace dc-text-lg"
+            href="https://membership.debtcollective.org/"
+            target="_blank"
+          >
+            Donate
+          </a>
+        </div>
+        <p class="mt-1 mb-3 dc-text-xs">
+          Help us fund our mission throughtout our membership platform.
+        </p>
+        <div class="dc-menu-card dc-menu-card--tools">
+          <a
+            class="dc-text-monospace dc-text-lg"
+            href="https://tools.debtcollective.org/"
+            target="_blank"
+          >
+            Dispute Tools
+          </a>
+        </div>
+        <p class="mt-1 mb-3 dc-text-xs">
+          Use our tools to start the process of cancelling your debt.
+        </p>
+        <div class="dc-menu-card dc-menu-card--community">
+          <a
+            class="dc-text-monospace dc-text-lg"
+            href="http://community.debtcollective.org/"
+            target="_blank"
+          >
+            Community
+          </a>
+        </div>
+        <p class="mt-1 mb-3 dc-text-xs">
+          Organize and take action with the help of our community
+        </p>
+        <div class="dc-menu-card dc-menu-card--blog">
+          <a
+            class="dc-text-monospace dc-text-lg"
+            href="https://powerreport.debtcollective.org/"
+            target="_blank"
+          >
+            Blog
+          </a>
+        </div>
+        <p class="mt-1 mb-3 dc-text-xs">
+          Stay informed on the debt crisis and major wins for fellow debtors
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
