--- a/scss/type.scss
+++ b/scss/type.scss
@@ -6,9 +6,13 @@ body {
   font-size: 2rem;
 }
 
-.dc-display {
-  font-size: 5rem;
+.dc-text-monospace {
   font-family: $font-family-monospace;
+}
+
+.dc-display {
+  @extend .dc-text-monospace;
+  font-size: 5rem;
 }
 
 @mixin dc-text-light($size: inherit) {
@@ -27,6 +31,10 @@ body {
 
 .dc-text-primary {
   color: $primary;
+}
+
+.dc-text-lg {
+  font-size: $font-size-lg;
 }
 
 .dc-text-small {
