fix(btn): avoid to use btn-text as collide with core code

--- a/javascripts/discourse/templates/components/dc-menu.hbs
+++ b/javascripts/discourse/templates/components/dc-menu.hbs
@@ -7,7 +7,7 @@
       alt="{{siteSettings.title}}"
     />
     <button
-      class="btn-text"
+      class="btn-transparent"
       aria-label="close menu"
       {{on "click" this.closeMenu}}
     >
