--- a/scss/button.scss
+++ b/scss/button.scss
@@ -12,7 +12,7 @@
   border-radius: 0.625rem;
 }
 
-.btn-text {
+.btn-transparent {
   border-radius: 0;
   border: none;
   background: transparent;
