--- a/scss/connectors/dc-menu.scss
+++ b/scss/connectors/dc-menu.scss
@@ -40,7 +40,7 @@ body.dc-menu-open {
     padding: 1.5rem;
   }
 
-  .dc-menu-content-header .btn-text {
+  .dc-menu-content-header .btn-transparent {
     align-items: center;
     background: rgba(57, 57, 57, 0.07);
     border-radius: 50%;
