--- a/scss/widgets/dc-logo.scss
+++ b/scss/widgets/dc-logo.scss
@@ -1,4 +1,16 @@
 .dc-logo-widget {
   display: flex;
   align-items: center;
+
+  @include media-breakpoint-up(md) {
+    display: none;
+  }
+}
+
+.built-in-logo {
+  display: none;
+
+  @include media-breakpoint-up(md) {
+    display: block;
+  }
 }
