feat(preferences): hide control of default homepage
the idea is to force users to have the same

--- a/common/common.scss
+++ b/common/common.scss
@@ -29,6 +29,7 @@
 @import "templates/composer";
 @import "templates/topic";
 @import "templates/user";
+@import "templates/preferences";
 
 @import "templates/list/dc-topic-author";
 @import "templates/list/dc-topic-card";
