feat(categories-nav): add support for custom links

--- a/javascripts/discourse/templates/components/dc-categories-nav.hbs
+++ b/javascripts/discourse/templates/components/dc-categories-nav.hbs
@@ -7,5 +7,12 @@
         </a>
       </li>
     {{/each}}
+    {{#each customLinks as |link|}}
+      <li>
+        <a href={{link.url}}>
+          {{link.text}}
+        </a>
+      </li>
+    {{/each}}
   </ul>
 </div>
