feat(dc-categories-nav): add support for external target links

--- a/javascripts/discourse/templates/components/dc-categories-nav.hbs
+++ b/javascripts/discourse/templates/components/dc-categories-nav.hbs
@@ -9,7 +9,7 @@
     {{/each}}
     {{#each customLinks as |link|}}
       <li>
-        <a href={{link.url}}>
+        <a href={{link.url}} target={{link.target}}>
           {{link.text}}
         </a>
       </li>
