fix(categories-dropdown): use all space available for categories items

--- a/scss/templates/components/list-controls.scss
+++ b/scss/templates/components/list-controls.scss
@@ -52,4 +52,8 @@ body {
     margin-top: 0;
     margin-bottom: 0;
   }
+
+  .select-kit-collection .select-kit-row.category-row {
+    max-width: 100%;
+  }
 }
