feat(dc-menu): improvents on buttons and anchors to follow a11y standars

--- a/javascripts/discourse/templates/components/dc-menu.hbs
+++ b/javascripts/discourse/templates/components/dc-menu.hbs
@@ -4,43 +4,37 @@
     <a class="btn-transparent" href={{homepageURL}} {{on "click" this.closeMenu}}>
       <img class="dc-menu-logo" src="{{siteSettings.site_logo_url}}" alt="{{siteSettings.title}}" />
     </a>
-    <button class="btn-transparent btn-close" aria-label="close menu" {{on "click" this.closeMenu}}>
-      <div class="material-icons" aria-label="close menu">
-        close
-      </div>
+    <button class="btn-transparent btn-close material-icons" aria-label="close menu" {{on "click" this.closeMenu}}>
+      close
     </button>
   </header>
   <div class="dc-container-fluid">
     <div class="dc-row">
       <div class="dc-col">
-        <a class="dc-menu-card dc-menu-card--membership" href="https://membership.debtcollective.org/" target="_blank">
-          <span class="dc-text-monospace dc-text-lg">
-            Donate
-          </span>
+        <a class="dc-menu-card dc-menu-card--membership dc-text-monospace dc-text-lg"
+          href="https://membership.debtcollective.org/" target="_blank">
+          Donate
         </a>
         <p class="mt-1 mb-3 dc-text-xs">
           Help us fund our mission throughtout our membership platform.
         </p>
-        <a class="dc-menu-card dc-menu-card--tools" href="https://tools.debtcollective.org/" target="_blank">
-          <span class="dc-text-monospace dc-text-lg">
-            Dispute Tools
-          </span>
+        <a class="dc-menu-card dc-menu-card--tools dc-text-monospace dc-text-lg"
+          href="https://tools.debtcollective.org/" target="_blank">
+          Dispute Tools
         </a>
         <p class="mt-1 mb-3 dc-text-xs">
           Use our tools to start the process of cancelling your debt.
         </p>
-        <a class="dc-menu-card dc-menu-card--community" href="http://community.debtcollective.org/" target="_blank">
-          <span class="dc-text-monospace dc-text-lg">
-            Community
-          </span>
+        <a class="dc-menu-card dc-menu-card--community dc-text-monospace dc-text-lg"
+          href="http://community.debtcollective.org/" target="_blank">
+          Community
         </a>
         <p class="mt-1 mb-3 dc-text-xs">
           Organize and take action with the help of our community
         </p>
-        <a class="dc-menu-card dc-menu-card--blog" href="https://powerreport.debtcollective.org/" target="_blank">
-          <span class="dc-text-monospace dc-text-lg">
-            Blog
-          </span>
+        <a class="dc-menu-card dc-menu-card--blog dc-text-monospace dc-text-lg"
+          href="https://powerreport.debtcollective.org/" target="_blank">
+          Blog
         </a>
         <p class="mt-1 mb-3 dc-text-xs">
           Stay informed on the debt crisis and major wins for fellow debtors
