feat(topic): add visual feedback for unseen content
Users now will see the built-in badges that indicates the unread content
https://www.loom.com/share/4098ab1d933441b38f2ed800ae06b666

re https://app.asana.com/0/1168997577035609/1182066742206561

--- a/javascripts/discourse/templates/components/dc-topic-card-content.hbs
+++ b/javascripts/discourse/templates/components/dc-topic-card-content.hbs
@@ -1,4 +1,9 @@
 <div class="dc-row h-100">
+  {{topic-post-badges
+    newPosts=topic.totalUnread
+    unseen=topic.unseen
+    url=topic.lastUnreadUrl
+  }}
   <div class="dc-col avatar-col">
     <div class="mr-2">
       {{raw "list/dc-topic-author" posters=topic.featuredUsers}}
