--- a/scss/templates/user.scss
+++ b/scss/templates/user.scss
@@ -5,3 +5,7 @@
 .user-content-wrapper .show-mores {
   position: relative;
 }
+
+.user-messages-page .dc-topic-card-content.already-seen {
+  opacity: 0.5;
+}
