feat(btn): make dismiss notifications an action button
re https://app.asana.com/0/1168997577035609/1182066742206561

--- a/scss/button.scss
+++ b/scss/button.scss
@@ -25,7 +25,8 @@
 
 .btn-action,
 .btn-primary,
-.widget-button.reply {
+.widget-button.reply,
+.dismiss-notifications.btn {
   @extend %action-button;
 }
 
