fix(current-efforts): pull using 'current-efforts' tag

--- a/javascripts/discourse/templates/components/dc-categories-only.hbs
+++ b/javascripts/discourse/templates/components/dc-categories-only.hbs
@@ -1,5 +1,5 @@
 {{#if themeSettings.show_current_efforts}}
-  {{#if currentEfforts}}
+  {{#if currentEfforts.length}}
     <div class="dc-categories-container">
       <h2 class="dc-heading mt-4 mb-2">
         {{theme-i18n "dc.categories.currentEfforts.title"}}
