fix(message-composer): avoid to render twice original message

--- a/scss/widgets/embedded-posts.scss
+++ b/scss/widgets/embedded-posts.scss
@@ -17,7 +17,7 @@
   }
 }
 
-section.embedded-posts.top.topic-body.offset2:not(.dc-component) {
+section.embedded-posts.top.topic-body:not(.dc-component) {
   display: none;
 }
 
