--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -123,3 +123,8 @@ ol.category-breadcrumb .select-kit.combo-box .select-kit-header {
   // we instead have the dc-widget-logo for menu
   display: none;
 }
+
+// Collectives Alert
+.alert.alert-collective-alert {
+  font-size: 14px;
+}
