--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -7,8 +7,11 @@ $green: #2dcbad;
 $purple: #dac4f5;
 $red: #ff4630;
 $yellow: #ffed9c;
+$yellow-100: #fff176;
+$yellow-200: #ffeb3b;
 $gold: #ffc957;
 $white: #ffffff;
+$black: #000000;
 
 // Shared
 $background-gradient: linear-gradient(180deg, #dbf8ff 0%, #fcfbf7 88.74%);
