--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -3,7 +3,9 @@ $beige: #fbfbfb;
 $blue: #03a9f4;
 $gray: #2b2b2b;
 $gray-100: #424242;
+$gray-200: #4d4d4d;
 $gray-ligth: #bdbdbd;
+$gray-ligth-100: #ebe7dc;
 $green: #2dcbad;
 $purple: #dac4f5;
 $red: #ff4630;
