--- a/scss/widgets/dc-collectives-alert.scss
+++ b/scss/widgets/dc-collectives-alert.scss
@@ -56,6 +56,7 @@
 
   @include media-breakpoint-up(sm) {
     flex-direction: row;
+    justify-content: start;
 
     .dc-alert-btn {
       width: auto;
