--- a/common/common.scss
+++ b/common/common.scss
@@ -46,6 +46,7 @@
 @import "widgets/user-menu";
 
 @import "login";
+@import "invites";
 
 // Re-apply foundation styles with different variables to overwrite rules
 // https://github.com/discourse/discourse/blob/master/app/assets/stylesheets/common/foundation/base.scss
