--- a/scss/widgets/header.scss
+++ b/scss/widgets/header.scss
@@ -11,24 +11,33 @@
 
 .d-header .panel {
   display: flex;
+  justify-content: space-between;
+  margin-left: 1rem;
+  flex: auto;
+  width: 100%;
 
-  .d-header-icons {
-    order: 2;
+  // These are some styles applied by discourse, by default the display is "table"
+  &.clearfix::before,
+  &.clearfix::after {
+    display: none;
   }
 }
 
 .d-header .header-buttons {
   order: 3;
-  margin: 0 0 0 0.5rem;
+  margin-left: 1rem;
+  flex-shrink: 0;
 }
 
 .d-header.with-user .header-buttons {
   order: 2;
 }
 
-.d-header-icons {
+.d-header .d-header-icons {
   align-items: center;
   display: flex;
+  width: 100%;
+  justify-content: space-between;
 
   li {
     order: 1;
@@ -65,11 +74,20 @@
 
 .dc-custom-headers-links {
   display: flex;
-  margin-right: 1rem;
 
   .dc-header-link {
     @extend %navigation-link;
     font-weight: $font-weight-bold;
     margin-right: 1rem;
+  }
+}
+
+.d-header.with-user .d-header-icons {
+  position: relative;
+  justify-content: flex-end;
+
+  .dc-custom-headers-links {
+    position: absolute;
+    left: 0;
   }
 }
