feat(header-component): set new styles to the header

--- a/javascripts/discourse/templates/components/dc-menu.hbs
+++ b/javascripts/discourse/templates/components/dc-menu.hbs
@@ -11,34 +11,9 @@
   <div class="dc-container-fluid">
     <div class="dc-row">
       <div class="dc-col">
-        <a class="dc-menu-card dc-menu-card--membership dc-text-monospace dc-text-lg"
-          href="https://membership.debtcollective.org/" target="_blank">
-          Donate
-        </a>
-        <p class="mt-1 mb-3 dc-text-xs">
-          Help us fund our mission throughtout our membership platform.
-        </p>
-        <a class="dc-menu-card dc-menu-card--tools dc-text-monospace dc-text-lg"
-          href="https://tools.debtcollective.org/" target="_blank">
-          Dispute Tools
-        </a>
-        <p class="mt-1 mb-3 dc-text-xs">
-          Use our tools to start the process of cancelling your debt.
-        </p>
-        <a class="dc-menu-card dc-menu-card--community dc-text-monospace dc-text-lg"
-          href="http://community.debtcollective.org/" target="_blank">
-          Community
-        </a>
-        <p class="mt-1 mb-3 dc-text-xs">
-          Organize and take action with the help of our community
-        </p>
-        <a class="dc-menu-card dc-menu-card--blog dc-text-monospace dc-text-lg"
-          href="https://powerreport.debtcollective.org/" target="_blank">
-          Blog
-        </a>
-        <p class="mt-1 mb-3 dc-text-xs">
-          Stay informed on the debt crisis and major wins for fellow debtors
-        </p>
+        <a href="https://debtcollective.org/debt-union/" target="_blank" class="dc-header-link dc-menu-link">Join the Union</a>
+        <a href="https://community.debtcollective.org/" class="dc-header-link dc-menu-link">Community</a>
+        <a href="https://teespring.com/stores/debt-collective" target="_blank" class="dc-header-link dc-menu-link">Store</a>
       </div>
     </div>
   </div>
