--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -1,5 +1,6 @@
 // Colours
 $beige: #fbfbfb;
+$beige-200: #fffbea;
 $blue: #03a9f4;
 $gray: #2b2b2b;
 $gray-100: #424242;
@@ -9,6 +10,7 @@ $gray-ligth-100: #ebe7dc;
 $green: #2dcbad;
 $purple: #dac4f5;
 $red: #ff4630;
+$scarlet: #ee2812;
 $yellow: #ffed9c;
 $yellow-100: #fff176;
 $yellow-200: #ffeb3b;
@@ -26,6 +28,7 @@ $font-family-monospace: "More Gothic Bold", Impact, sans-serif;
 
 $font-size-base: 1rem;
 $font-size-lg: 1rem * 1.25;
+$font-size-xl: 1rem * 1.5;
 $font-size-sm: 1rem * 0.875;
 $font-size-xs: 1rem * 0.75;
 $font-weight-light: 300;
