--- a/scss/connectors/dc-menu.scss
+++ b/scss/connectors/dc-menu.scss
@@ -32,8 +32,13 @@ body.dc-menu-open {
   transition: transform ease 0.216s;
   overflow-y: auto;
 
-  .dc-menu-card {
-    margin-top: 1rem;
+  .dc-menu-link {
+    display: block;
+    margin-bottom: 1rem;
+
+    &:first-child {
+      margin-top: 1rem;
+    }
   }
 
   .dc-menu-content-header {
@@ -46,13 +51,12 @@ body.dc-menu-open {
 
   .dc-menu-content-header .btn-close {
     align-items: center;
-    background: rgba(57, 57, 57, 0.07);
     border-radius: 50%;
     display: flex;
     padding: 0.5rem;
 
     &.material-icons {
-      font-size: $font-size-base;
+      font-size: $font-size-xl;
     }
   }
 }
@@ -71,38 +75,4 @@ body.dc-menu-open {
   left: 0;
   display: none;
   touch-action: pan-y pinch-zoom;
-}
-
-.dc-menu-card {
-  align-items: center;
-  border-radius: 0.25rem;
-  box-shadow: 0 0.0625rem 0.1875rem rgba(0, 0, 0, 0.12),
-    0 0.0625rem 0.125rem rgba(0, 0, 0, 0.24);
-  display: flex;
-  height: 8.5rem;
-  justify-content: center;
-  width: 100%;
-  transition: all 0.216s cubic-bezier(0.25, 0.8, 0.25, 1);
-
-  &,
-  &:visited,
-  &:active {
-    color: $body-color;
-  }
-
-  &--community {
-    background: $yellow;
-  }
-
-  &--blog {
-    background: $green;
-  }
-
-  &--tools {
-    background: $purple;
-  }
-
-  &--membership {
-    background: $blue;
-  }
 }
