--- a/scss/widgets/header.scss
+++ b/scss/widgets/header.scss
@@ -1,3 +1,13 @@
+.header-btn {
+  align-items: center;
+  border-radius: 0.25rem;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  // Discourse applies by default a padding rule: padding: 6px 10px;
+  padding: 0.75rem 1rem !important;
+}
+
 .d-header {
   background: $beige;
   height: $header-height;
@@ -11,22 +21,47 @@
 
 .d-header .panel {
   display: flex;
-  justify-content: space-between;
-  margin-left: 1rem;
-  flex: auto;
-  width: 100%;
 
   // These are some styles applied by discourse, by default the display is "table"
   &.clearfix::before,
   &.clearfix::after {
     display: none;
   }
+
+  @include media-breakpoint-up(md) {
+    flex: auto;
+    justify-content: space-between;
+    margin-left: 1rem;
+    width: 100%;
+  }
 }
 
 .d-header .header-buttons {
-  order: 3;
-  margin-left: 1rem;
+  align-items: initial;
   flex-shrink: 0;
+  margin-top: 0;
+  order: 3;
+
+  .login-button {
+    background: transparent;
+    border: 0.0625rem solid $gray;
+    color: $gray;
+    transition: background 0.216s ease 0s, color 0.216s ease 0s;
+
+    &:hover {
+      background-color: $beige-200;
+    }
+  }
+
+  .donate-button {
+    background-color: $red;
+    color: $white;
+    margin-left: 0.4375rem;
+
+    &:hover {
+      background: $scarlet;
+    }
+  }
 }
 
 .d-header.with-user .header-buttons {
@@ -74,12 +109,12 @@
 
 .dc-custom-headers-links {
   display: flex;
+}
 
-  .dc-header-link {
-    @extend %navigation-link;
-    font-weight: $font-weight-bold;
-    margin-right: 1rem;
-  }
+.dc-header-link {
+  @extend %navigation-link;
+  font-weight: $font-weight-bold;
+  margin-right: 1rem;
 }
 
 .d-header.with-user .d-header-icons {
