--- a/javascripts/discourse/templates/modal/login.hbs
+++ b/javascripts/discourse/templates/modal/login.hbs
@@ -15,16 +15,18 @@
     showCloseButton=true
     showLogo=true
   }}
-    {{#if showSignupLink}}
-      <div class="have-an-account">
-        <p>
-          Need an account?
-          <a href id="new-account-link" {{action "createAccount"}}>
-            {{i18n "create_account.title"}}
-          </a>
-        </p>
-      </div>
-    {{/if}}
+    <div>
+      <p>
+        Need an account?
+        <a href="https://debtcollective.org/debt-union" id="new-account-link">
+          Join the union for access!
+        </a>
+        <br />
+        <small>
+          Union membership grants you access to the Community Forums, Dispute Tools and much more!
+        </small>
+      </p>
+    </div>
     {{#if canLoginLocal}}
       <form id="login-form" method="post">
         <div id="credentials" class={{credentialsClass}}>
