feat(dc-menu): include take action links

--- a/javascripts/discourse/templates/components/dc-menu.hbs
+++ b/javascripts/discourse/templates/components/dc-menu.hbs
@@ -14,6 +14,12 @@
         <a href="https://debtcollective.org/debt-union/" target="_blank" class="dc-header-link dc-menu-link">Join the Union</a>
         <a href="https://community.debtcollective.org/" class="dc-header-link dc-menu-link">Community</a>
         <a href="https://teespring.com/stores/debt-collective" target="_blank" class="dc-header-link dc-menu-link">Store</a>
+        <details class="dc-collapser">
+          <summary class="dc-header-link">Take Action!</summary>
+          <a href="https://community.debtcollective.org/calendar" class="dc-collapser-link" target="_self">Events</a>
+          <a href="https://strike.debtcollective.org/" class="dc-collapser-link" target="_blank">Student Debt Strike</a>
+          <a href="https://tools.debtcollective.org/" class="dc-collapser-link" target="_blank">Dispute Your Debt</a>
+        </details>
       </div>
     </div>
   </div>
