--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -17,6 +17,7 @@ $yellow-200: #ffeb3b;
 $gold: #ffc957;
 $white: #ffffff;
 $black: #000000;
+$disabled-text-color: #52575c;
 
 // Shared
 $background-gradient: linear-gradient(180deg, #dbf8ff 0%, #fcfbf7 88.74%);
