feat(header-component): make header logo route to the home page

--- a/javascripts/discourse/templates/components/dc-menu.hbs
+++ b/javascripts/discourse/templates/components/dc-menu.hbs
@@ -1,7 +1,7 @@
 <div class="dc-header-cloak" {{on "click" this.closeMenu}}></div>
 <div class="dc-menu-content">
   <header class="dc-menu-content-header">
-    <a class="btn-transparent" href={{homepageURL}} {{on "click" this.closeMenu}}>
+    <a class="btn-transparent" href="https://debtcollective.org/">
       <img class="dc-menu-logo" src="{{siteSettings.site_logo_url}}" alt="{{siteSettings.title}}" />
     </a>
     <button class="btn-transparent btn-close material-icons" aria-label="close menu" {{on "click" this.closeMenu}}>
