fix(category): allow to render properly category with icon

--- a/scss/templates/components/list-controls.scss
+++ b/scss/templates/components/list-controls.scss
@@ -23,6 +23,11 @@ body {
     align-items: center;
   }
 
+  .navigation-container {
+    display: flex;
+    flex-direction: column;
+  }
+
   #create-topic,
   .btn {
     order: 1;
