--- a/common/common.scss
+++ b/common/common.scss
@@ -26,6 +26,7 @@
 @import "templates/components/list-controls";
 @import "templates/components/navigation-bar";
 @import "templates/components/topic-list";
+@import "templates/navigation/category";
 @import "templates/composer";
 @import "templates/topic";
 @import "templates/user";
