--- a/javascripts/discourse/templates/components/topic-list.hbs
+++ b/javascripts/discourse/templates/components/topic-list.hbs
@@ -1,36 +1,31 @@
 {{! https://github.com/discourse/discourse/blob/master/app/assets/javascripts/discourse/templates/components/topic-list.hbs }}
 <div class="dc-topic-list-container">
-  {{#dc-show-more}}
-    <div class="dc-row">
-      {{#each filteredTopics as |topic|}}
-        {{#if renderCompact}}
-          <div class="dc-col-sm-4">
-            {{dc-topic-list-item-small topic=topic}}
-          </div>
-        {{else}}
-          <div class="dc-col-sm-6 show-more-visible-{{topic.pinned}}">
-            {{topic-list-item
-              topic=topic
-              bulkSelectEnabled=bulkSelectEnabled
-              showTopicPostBadges=showTopicPostBadges
-              hideCategory=hideCategory
-              showPosters=showPosters
-              showLikes=showLikes
-              showOpLikes=showOpLikes
-              expandGloballyPinned=expandGloballyPinned
-              expandAllPinned=expandAllPinned
-              lastVisitedTopic=lastVisitedTopic
-              selected=selected
-              tagsForUser=tagsForUser
-            }}
-          </div>
-          {{raw
-            "list/visited-line"
-            lastVisitedTopic=lastVisitedTopic
+  <div class="dc-row">
+    {{#each filteredTopics as |topic|}}
+      {{#if renderCompact}}
+        <div class="dc-col-sm-4">
+          {{dc-topic-list-item-small topic=topic}}
+        </div>
+      {{else}}
+        <div class="dc-col-sm-6 show-more-visible-{{topic.pinned}}">
+          {{topic-list-item
             topic=topic
+            bulkSelectEnabled=bulkSelectEnabled
+            showTopicPostBadges=showTopicPostBadges
+            hideCategory=hideCategory
+            showPosters=showPosters
+            showLikes=showLikes
+            showOpLikes=showOpLikes
+            expandGloballyPinned=expandGloballyPinned
+            expandAllPinned=expandAllPinned
+            lastVisitedTopic=lastVisitedTopic
+            selected=selected
+            tagsForUser=tagsForUser
           }}
-        {{/if}}
-      {{/each}}
-    </div>
-  {{/dc-show-more}}
+        </div>
+        {{raw "list/visited-line" lastVisitedTopic=lastVisitedTopic topic=topic
+        }}
+      {{/if}}
+    {{/each}}
+  </div>
 </div>
