--- a/javascripts/discourse/templates/components/dc-categories-only.hbs
+++ b/javascripts/discourse/templates/components/dc-categories-only.hbs
@@ -17,13 +17,13 @@
     </div>
   {{/if}}
 {{/if}}
-{{#if nonCollectives}}
+{{#if topicCategories}}
   <div class="dc-categories-container">
     <h2 class="dc-heading mt-4 mb-2">
-      {{theme-i18n "dc.categories.others.title"}}
+      {{theme-i18n "dc.categories.categories.title"}}
     </h2>
     <div class="dc-row mt-4">
-      {{#each nonCollectives as |c|}}
+      {{#each topicCategories as |c|}}
         <div class="dc-col-sm-6">
           {{dc-category-card category=c}}
         </div>
