--- a/javascripts/discourse/templates/components/dc-categories-only.hbs
+++ b/javascripts/discourse/templates/components/dc-categories-only.hbs
@@ -19,9 +19,18 @@
 {{/if}}
 {{#if topicCategories}}
   <div class="dc-categories-container">
-    <h2 class="dc-heading mt-4 mb-2">
-      {{theme-i18n "dc.categories.categories.title"}}
-    </h2>
+    <div
+      class="d-flex flex-row align-items-center justify-content-between mt-4 mb-2"
+    >
+      <h2 class="dc-heading m-0">
+        {{theme-i18n "dc.categories.categories.title"}}
+      </h2>
+      {{#if showCategoryAdmin}}
+        {{categories-admin-dropdown
+          onChange=(action "selectCategoryAdminDropdownAction")
+        }}
+      {{/if}}
+    </div>
     <div class="dc-row mt-4">
       {{#each topicCategories as |c|}}
         <div class="dc-col-sm-6">
