--- a/javascripts/discourse/templates/discovery.hbs
+++ b/javascripts/discourse/templates/discovery.hbs
@@ -5,31 +5,33 @@
   <div class="container">
     {{discourse-banner user=currentUser banner=site.banner}}
   </div>
-  <div class="list-controls">
-    <div class="container">
-      {{outlet "navigation-bar"}}
-    </div>
-  </div>
-  {{conditional-loading-spinner condition=loading}}
-  <div class="container list-container {{if loading "hidden"}}">
-    <div class="row">
-      <div class="full-width">
-        <div id="header-list-area">
-          {{outlet "header-list-container"}}
+  <div class="container">
+    <div class="dc-row">
+      <div class="dc-col">
+        <div class="list-controls">
+          <div class="container">
+            {{outlet "navigation-bar"}}
+          </div>
         </div>
+        {{conditional-loading-spinner condition=loading}}
+        <div class="list-container {{if loading "hidden"}}">
+          <div class="full-width">
+            <div id="header-list-area">
+              {{outlet "header-list-container"}}
+            </div>
+          </div>
+          <div class="full-width">
+            <div id="list-area">
+              {{plugin-outlet
+                name="discovery-list-container-top"
+                args=(hash category=category listLoading=loading)
+              }}
+              {{outlet "list-container"}}
+            </div>
+          </div>
+        </div>
+        {{plugin-outlet name="discovery-below"}}
       </div>
     </div>
-    <div class="row">
-      <div class="full-width">
-        <div id="list-area">
-          {{plugin-outlet
-            name="discovery-list-container-top"
-            args=(hash category=category listLoading=loading)
-          }}
-          {{outlet "list-container"}}
-        </div>
-      </div>
-    </div>
   </div>
-  {{plugin-outlet name="discovery-below"}}
 {{/if}}
