--- a/scss/templates/user.scss
+++ b/scss/templates/user.scss
@@ -204,6 +204,7 @@
 
   @include media-breakpoint-down(sm) {
     ul {
+      display: -ms-grid;
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-gap: 0.75rem;
@@ -222,6 +223,7 @@
 
 .most-liked-section,
 .top-replies-section {
+  display: -ms-grid;
   display: grid;
   grid-gap: 2.4375rem;
   grid-template-columns: 1fr;
@@ -449,6 +451,7 @@
 
 // User Badges
 .user-content.user-badges-list {
+  display: -ms-grid;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(18.75rem, 1fr));
   grid-gap: $grid-gutter-width;
