--- a/javascripts/discourse/templates/components/dc-categories-only.hbs
+++ b/javascripts/discourse/templates/components/dc-categories-only.hbs
@@ -1,13 +1,13 @@
 {{#if themeSettings.show_current_efforts}}
   {{#if currentEfforts.length}}
     <div class="dc-categories-container">
-      <h2 class="dc-heading mt-4 mb-2">
+      <h2 class="mt-0 mb-2 dc-heading">
         {{theme-i18n "dc.categories.currentEfforts.title"}}
       </h2>
       <p>
         {{{theme-i18n "dc.categories.currentEfforts.description"}}}
       </p>
-      <div class="dc-row mt-4">
+      <div class="mt-4 dc-row">
         {{#each currentEfforts as |t|}}
           <div class="dc-col-sm-4">
             {{dc-topic-list-item-small topic=t}}
@@ -18,11 +18,9 @@
   {{/if}}
 {{/if}}
 {{#if topicCategories}}
-  <div class="dc-categories-container">
-    <div
-      class="d-flex flex-row align-items-center justify-content-between mt-4 mb-2"
-    >
-      <h2 class="dc-heading m-0">
+  <div class="mt-4 mb-2 dc-categories-container">
+    <div class="flex-row d-flex align-items-center justify-content-between">
+      <h2 class="m-0 dc-heading">
         {{theme-i18n "dc.categories.categories.title"}}
       </h2>
       {{#if showCategoryAdmin}}
@@ -31,9 +29,9 @@
         }}
       {{/if}}
     </div>
-    <div class="dc-row mt-4">
+    <div class="mt-4 dc-row">
       {{#each topicCategories as |c|}}
-        <div class="dc-col-sm-6">
+        <div class="dc-col-sm-6 dc-col-lg-12">
           {{dc-category-card category=c}}
         </div>
       {{/each}}
