fix(card): adjust vertical space

--- a/javascripts/discourse/templates/components/dc-topic-list-item-small.hbs
+++ b/javascripts/discourse/templates/components/dc-topic-list-item-small.hbs
@@ -1,7 +1,7 @@
 <a class="dc-topic dc-card dc-topic-small" href={{topic.lastUnreadUrl}}>
   <div class="dc-row h-100">
     <div class="dc-col">
-      <div class="dc-card__content justify-content-around text-center h-100">
+      <div class="text-center dc-card__content justify-content-around h-100">
         {{raw "list/dc-topic-author" posters=topic.featuredUsers}}
         <h2 class="dc-card__title dc-clamp-2-fixed">
           {{{topic.fancyTitle}}}
