--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -61,7 +61,8 @@ $danger: #dc3545;
 $light: #f8f9fa;
 $dark: #3c3c3c;
 
-$card-height: 11rem;
+// As flex layout the height will affect vertical space
+$card-height: 13rem;
 $btn-action-color: $secondary;
 
 $header-height: 5rem;
