feat(sidebar): allow to render a sidebar
sidebar will render alongside topic list and category list. It is important
to disable the hero section on category list as it hasn't been adapted yet

--- a/common/common.scss
+++ b/common/common.scss
@@ -25,6 +25,7 @@
 @import "templates/components/list-controls";
 @import "templates/components/navigation-bar";
 @import "templates/components/topic-list";
+@import "templates/components/dc-sidebar";
 @import "templates/navigation/category";
 @import "templates/composer";
 @import "templates/topic";
