--- a/javascripts/discourse/templates/discovery.hbs
+++ b/javascripts/discourse/templates/discovery.hbs
@@ -7,7 +7,12 @@
   </div>
   <div class="container">
     <div class="dc-row">
-      <div class="dc-col">
+      <div class="dc-col-lg-4">
+        <div class="d-none d-lg-flex h-100">
+          {{dc-sidebar}}
+        </div>
+      </div>
+      <div class="dc-col-lg-8">
         <div class="list-controls">
           <div class="container">
             {{outlet "navigation-bar"}}
