--- a/javascripts/discourse/templates/components/dc-sidebar.hbs
+++ b/javascripts/discourse/templates/components/dc-sidebar.hbs
@@ -1,42 +1,53 @@
 <div class="mb-4">
-  <a class="sidebar-link" href="/categories">
+  <a
+    class="sidebar-link {{unless activeCategoryId "active"}}"
+    href="/categories"
+    {{action "setActiveCategoryId" null}}
+  >
     All categories
   </a>
 </div>
 <ul class="list-unstyled">
-  {{#each categories as |c|}}
+  {{#each categories as |category|}}
     {{! Avoid to iterate if this category is a subcategory }}
-    {{#unless c.parentCategory}}
-      <li class="list-item">
+    {{#unless category.parentCategory}}
+      {{#dc-sidebar-item category=category currentCategoryId=activeCategoryId}}
         <a
-          id="sidebar-link-{{c.id}}"
+          id="sidebar-link-{{category.id}}"
           class="dynamic-hover-color"
-          style="color: #{{c.color}};"
-          href="{{c.url}}"
+          style="color: #{{category.color}};"
+          href="{{category.url}}"
+          {{action "setActiveCategoryId" category.id}}
         >
-          {{#if c.read_restricted}}
+          {{#if category.read_restricted}}
             {{d-icon "lock"}}
           {{/if}}
-          {{c.name}}
+          {{category.name}}
         </a>
-        {{#if c.subcategories}}
-          <ul class="ml-4 list-unstyled">
-            {{#each c.subcategories as |sc|}}
-              <a
-                id="sidebar-link-{{sc.id}}"
-                class="dynamic-hover-color"
-                style="color: #{{sc.color}};"
-                href="{{sc.url}}"
-              >
-                {{#if sc.read_restricted}}
-                  {{d-icon "lock"}}
-                {{/if}}
-                {{sc.name}}
-              </a>
+        {{#if category.subcategories}}
+          <ul class="ml-4 list-unstyled list-nested">
+            {{#each category.subcategories as |subcategory|}}
+              {{#dc-sidebar-item
+                category=subcategory
+                currentCategoryId=activeCategoryId
+              }}
+                <a
+                  id="sidebar-link-{{subcategory.id}}"
+                  class="dynamic-hover-color"
+                  style="color: #{{subcategory.color}};"
+                  href="{{subcategory.url}}"
+                  {{action "setActiveCategoryId" subcategory.id}}
+                >
+                  {{#if subcategory.read_restricted}}
+                    {{d-icon "lock"}}
+                  {{/if}}
+                  {{subcategory.name}}
+                </a>
+              {{/dc-sidebar-item}}
             {{/each}}
           </ul>
         {{/if}}
-      </li>
+      {{/dc-sidebar-item}}
     {{/unless}}
   {{/each}}
 </ul>
